# hgl

./: .gitignore
rust/: Cargo.toml
rust/indexed_vec/: Cargo.toml
rust/indexed_vec/src/: index.rs  indexed_slice.rs  indexed_vec.rs  lib.rs  strings_with_index.rs  vec_with_index.rs
rust/models/: Cargo.toml
rust/models/src/: alu.rs  apb.rs  apb_target_gpio.rs  counter.rs  lib.rs  memories.rs  nested_structures.rs  register.rs  register_wrapper.rs  threaded.rs
rust/models/tests/: sim_apb.rs  sim_clocks.rs  sim_counter.rs  sim_memory.rs  sim_register.rs  sim_threaded.rs
rust/sim/: Cargo.toml
rust/sim/src/: dynamic_barrier.rs  lib.rs  prelude.rs  sync.rs  traits.rs  utils.rs
rust/sim/src/data/: bit_range.rs  mod.rs  u8_ops.rs
rust/sim/src/simulation/: clock.rs  contents.rs  control.rs  edge_mask.rs  instance.rs  instance_ref.rs  mod.rs  names.rs  port.rs  simulation.rs  traits.rs
rust/sim/src/traits/: bv.rs  bv_data.rs  mod.rs  simulation.rs  types.rs
rust/sim/src/types/: bit.rs  bit_range.rs  bv.rs  bv_data.rs  bv_sim64.rs  bv_sim64_array.rs  mod.rs  sim_format_value.rs  sim_value_ref.rs  std.rs  traits.rs  u8_ops.rs
rust/sim/src/utils/: bit_ops.rs  mod.rs  named_array.rs
rust/sim/src/value_types/: bit.rs  bv.rs  bv_sim64.rs  bv_sim64_array.rs  mod.rs  std.rs
rust/sim/src/values/: mod.rs  sim_format_value.rs  sim_value_ref.rs
rust/sim/tests/: test_bit.rs  test_bv.rs  test_bv_program.rs
rust/src/: lib.rs
rust/utils/: Cargo.toml
rust/utils/src/: bit_ops.rs  bit_set.rs  cpu_timer.rs  fmt.rs  index.rs  indexed_slice.rs  indexed_vec.rs  lib.rs  refs.rs  strings_with_index.rs  timer.rs  vec_with_index.rs
rust/utils/tests/: cpu_timer.rs
