[workspace]
resolver = "2"
# These are directory names
default_members = [ "indexed_vec", "utils", "sim", "models"]
members = [ "indexed_vec", "utils", "sim", "models"]

[package]
edition = "2021"
version = "0.0.1"
name = "hgl"
description = "Rust cycle simulation and Hgl tools"
homepage = "https://github.com/atthecodeface/hgl"
documentation = "https://docs.rs/hgl"
keywords = ["geometry"]
categories = ["graphics"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/atthecodeface/hgl"

# Here for subcrates to inherit
[workspace.package]
edition = "2021"
version = "0.0.1"
homepage = "https://github.com/atthecodeface/hgl"
documentation = "https://docs.rs/hgl"
keywords = ["geometry"]
categories = ["graphics"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/atthecodeface/hgl"

[workspace.features]
default = ["timer"]
timer = []

[dependencies]
hgl_indexed_vec = { version = "0.0.1", path = "./indexed_vec" }
hgl_utils = { version = "0.0.1", path = "./utils" }
hgl_sim = { version = "0.0.1", path = "./sim" }
hgl_models = { version = "0.0.1", path = "./models" }


[workspace.dependencies]
hgl_indexed_vec = { version = "0.0.1", path = "./indexed_vec" }
hgl_utils = { version = "0.0.1", path = "./utils" }
hgl_sim = { version = "0.0.1", path = "./sim" }
hgl_models = { version = "0.0.1", path = "./models" }

[workspace.dependencies.rand]
version = "0.8.5"

[workspace.dependencies.serde]
version = "1.0"
features = ["derive", "rc"]

[workspace.dependencies.thiserror]
version = ">=1.0.61"

[workspace.dependencies.serde_json]
version = "1.0.91"

[workspace.dependencies.clap]
version = "4.5.2"
features = ["string"]

