[package]
name = "hgl_indexed_vec"
edition.workspace = true
version.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true
description = "Indexed vector"

[dependencies]
serde.workspace = true
thiserror.workspace = true
