[package]
name = "hgl_models"
edition.workspace = true
version.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true
description = "Simulation and support for models"

[dependencies]
hgl_sim.workspace = true
cpu_timer.workspace = true
rand.workspace = true
serde.workspace = true
thiserror.workspace = true

# Only for tests...
# hgl_utils.workspace = true
hgl_indexed_vec.workspace = true
