[package]
name = "hgl_sim"
edition.workspace = true
version.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true
description = "Simulation and support for models"

[features]
default = ["timer"]
timer = []

[dependencies]
hgl_indexed_vec.workspace = true
hgl_utils.workspace = true
rand.workspace = true
serde.workspace = true
thiserror.workspace = true
