[package]
name = "hgl_utils"
edition.workspace = true
version.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true
description = "Miscellaneous utilities used internally be hgl"

[dependencies]
serde.workspace = true
thiserror.workspace = true
